ingress/nginx-internal-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-internal-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx-internal
    app.kubernetes.io/instance: ingress-nginx-internal
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-internal
      app.kubernetes.io/instance: ingress-nginx-internal
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-internal
        app.kubernetes.io/instance: ingress-nginx-internal
        app.kubernetes.io/component: controller
    spec:
      # Deploy on the node where Longhorn runs (10.0.0.4)
      nodeSelector:
        kubernetes.io/hostname: shion-ubuntu-2505
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      serviceAccountName: ingress-nginx
      # Use host network to bind directly to node IP (10.0.0.4)
      # This makes the controller accessible at 10.0.0.4:80 and 10.0.0.4:443
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.15.0
          args:
            - /nginx-ingress-controller
            - --election-id=ingress-nginx-internal-leader
            - --controller-class=k8s.io/ingress-nginx-internal
            - --ingress-class=nginx-internal
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-internal-controller
            - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
            - --http-port=80
            - --https-port=443
            - --default-ssl-certificate=ingress-nginx/nginx-tls-secret
            - --v=2
            - --enable-ssl-passthrough=false
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
            - name: postgres
              containerPort: 5432
              hostPort: 5432
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-internal
  labels:
    app.kubernetes.io/name: ingress-nginx-internal
    app.kubernetes.io/instance: ingress-nginx-internal
spec:
  controller: k8s.io/ingress-nginx-internal
